Table users {
  user_id int [primary key, increment]
  login string [unique, not null]
  hash_password string [not null]
  created_at timestamp [not null, default: `now()`]
}

Table boards {
  board_id int [primary key, increment]
  creator_id int [not null, ref: > users.user_id]
  title string
  description string
  background_color string
  is_public boolean [default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table accesses {
  access_id int [primary key, increment]
  user_id int [not null, ref: > users.user_id]
  board_id int [not null, ref: > boards.board_id]
  permission string [not null, default: 'view', note: 'view или edit']
  granted_at timestamp [not null, default: `now()`]
  granted_by int [not null, ref: > users.user_id, note: 'ID пользователя, предоставившего доступ']
  
  indexes {
    (user_id, board_id) [unique]
  }
}

Table stickers {
  sticker_id int [primary key, increment]
  board_id int [not null, ref: > boards.board_id]
  created_by int [not null, ref: > users.user_id]
  x float [not null]
  y float [not null]
  layer_level int [not null]
  text string
  width float
  height float
  color string [not null, default: '#FFEB3B']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

